# omni_nmpc_casadi

./: CMakeLists.txt  package.xml
config/: config.rviz
launch/: nmpc_path_tracking.launch
src/: lnmpc_node.py  nmpc_node.py
test/: test_lnmpc.py  test_nmpc.py
